no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -638,6 +638,10 @@ no-tabs [OBJ]                     #Avoid tabs
                                   #OBJ: allowIndentationTabs BOOL (def: false)
 no-mixed-spaces-and-tabs [OBJ]    #Avoid mixed spaces and tabs for indentation
                                   #OBJ: smartTabs BOOL (def: false): allow tabs when used for alignment
+unicorn/template-indent [OBJ]    ##Indentation inside `...` STR
+                                 ##OBJ:
+                                 ##  - indent NUM|STR (def: guessed)
+                                 ##  - tags|functions|selectors|comments STR: only applied on specific `...` preceded by those
 
 
                                              /=+===============================+=\
@@ -1638,7 +1642,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (36.0.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (37.0.0)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
