no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -352,9 +352,10 @@ null                              #
                                   #     - but not with normal for loop
 NonNullable<TYPE>                 #TYPE minus undefined|null
 
-{ VAR[?][: TYPE],... }            #Many TYPEs and assertions use ? which allows:
-([...]VAR[?][: TYPE],...) => TYPE2#  - missing values: {} FUNC() []
-[TYPE?,...]                       #     - only way to allow them
+{ VAR[?][: TYPE],... }            #Many TYPEs and assertions use ? which allows both:
+([...]VAR[?][: TYPE],...) => TYPE2#  - missing key|value: {} FUNC() []
+[TYPE?,...]                       #     - unlike TYPE|undefined
+                                  #     - only way to allow them
                                   #  - undefined: {VAR: undefined} FUNC(undefined) [undefined]
                                   #     - like TYPE|undefined
 Partial<OBJ_TYPE>                 #Adds ? on all properties
@@ -679,10 +680,18 @@ Exclude<TYPE, TYPE2>              #Difference (in TYPE but not in TYPE2)
 
 type TYPE<T...> = ...             #Declaring a generic TYPE, i.e. must specify another TYPE2 during usage.
 class CLASS<T...> {}              #<T...> is <T [extends TYPE3,...][= TYPE4],...>
-interface INTERFACE<T,...> {}     #Type of T is:
-[new] <T...>(...) => ...          #  - when not instantiated: TYPE3 & ... (def: unknown) ("generic constraint")
-{ FUNC<T...>(...): ... }          #  - when instantiated: the specified TYPE2 (def: TYPE4, required otherwise)
-{ [new] <T...>(...): ... }        #There can be several <T,...>
+interface INTERFACE<T,...> {}     #Type of T is, when instantiated:
+[new] <T...>(...) => ...          #  - with TYPE<TYPE2>:
+{ FUNC<T...>(...): ... }          #     - use the specified TYPE2
+{ [new] <T...>(...): ... }        #     - if none, use "= TYPE4"
+                                  #        - required otherwise
+                                  #  - through argument passing:
+                                  #     - i.e. applied to argument type:
+                                  #        - with <T...>(...) => ... (or similar)
+                                  #        - then function called
+                                  #     - use TYPE3 & ... from "extends TYPE3,..." ("generic constraint")
+                                  #     - if none, use unknown
+                                  #There can be several <T,...>
                                   #  - each can refer to each other
                                   #Can also transtype towards TYPE|CLASS|INTERFACE|FUNC that is generic itself.
                                   #  - i.e. values transtyped towards generic TYPE must already have been declared using <T,...>
