no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Testing/tsd.node.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Testing/tsd.node.txt
@@ -1,6 +1,97 @@
 
-         
-   TSD   
-         
+       
+   TSD  
+       
 
 
+
+VERSION ==>                       #0.18.0
+
+GOAL ==>                          #Automated testing of TypeScript typing
+STATIC ANALYSIS ==>               #The type files are not run, but only parsed statically.
+                                  #It looks for expect*<TYPE>(...) expressions.
+LINTING ==>                       #Also lints:
+                                  #  - PACKAGE.types is used, not PACKAGE.typings
+                                  #  - PACKAGE.files contains OPTS.typingsFile
+
+TOP-LEVEL AWAIT ==>               #Can be used
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             MAIN              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+tsd [DIR]                         #DIR is OPTS.cwd
+
+TSD(OPTS)->PROMISE_ARR_DIAGNOSTIC #Programmatic usage.
+DIAGNOSTIC                        #Error|warning instance
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            CONFIG             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+OPTS                              #Can only be specified programmatically, except OPTS.cwd
+TSD_CONF                          #Specified at PACKAGE.tsd
+
+tsconfig.json                     #Is used, but with defaults:
+                                  #  --strict
+                                  #  --lib=es2017|dom|dom.iterable
+                                  #  --target=es2017
+                                  #  --module=commonjs
+                                  #  --moduleResolution=node
+                                  #  --esModuleIterop
+                                  #  --jsx=react
+                                  #Can be overridden by using any TSD_CONF.compilerOptions.*
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             FILES             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+OPTS.testFiles                    #'GLOB'_ARR of *.test-d.ts[x] files
+                                  #Def:
+                                  #  - OPTS.typingsFile, but with *.test-d.ts[x] instead of *.d.ts
+                                  #  - {TSD_CONF.directory}/**/*.ts[x]
+OPTS.typingsFile                  #'FILENAME' of main *.d.ts file
+                                  #Def:
+                                  #  - PACKAGE.types|typings
+                                  #  - {PACKAGE.main}.d.ts
+                                  #  - CWD/index.d.ts
+TSD_CONF.directory                #Def: 'test-d'
+OPTS.cwd                          #Def: '.'
+                                  #Used to:
+                                  #  - find `package.json`, `tsconfig.json`
+                                  #  - resolve OPTS.typingsFile|testFiles and TSD_CONF.directory
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          ASSERTIONS           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+expect[Not]Type<TYPE>(VAL)        #Asserts that VAL is [not] exactly of TYPE
+expect[Not]Assignable<TYPE>(VAL)  #Asserts that VAL can [not] be transtyped to TYPE
+expect[Not]Deprecated(VAL)        #Asserts that @deprecated is [not] used
+expectError(VAL)                  #Asserts that VAL has assertion type errors, e.g. FUNC(...) with wrong argument types.
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             DEBUG             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+printType(VAL)                    #Print TYPE, for debugging
