no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #8.3.0
+VERSION ==>                       #10.4.0
 
 
                                              /=+===============================+=\
@@ -25,24 +25,30 @@ CONF                              #Can be:
                                   #  - ARR -> 'STR,...'
                                   #  - OBJ -> 'JSON'
                                   #  - FUNC -> not possible
+--show-config                     #Print resolved CONF, for debugging
 
 TCONF                             #TypeScript configuration.
                                   #Forces:
-                                  #  - no --noEmit
                                   #  - no --declaration[Map] --emitDeclarationOnly
                                   #  - --outDir '$$ts-node$$' (no --out[File]), but actually not written
                                   #  - --sourceMap --inlineSources
                                   #     - but actually uses inline source maps
                                   #     - uses node-source-map-support on type checking ERRORs
-                                  #  - no incremental builds (--composite, --tsBuildInfoFile, --incremental)
-                                  #  - no --files|include|exclude if --files false (def)
                                   #Default:
                                   #  - --target es5 (instead of es3)
                                   #  - --module commonjs
+--script-mode                     #Resolve tsconfig.json and CONF.ignore based on compiled file (def if there is one)
+--cwd-mode                        #Resolve tsconfig.json and CONF.ignore based on CONF.cwd (def otherwise)
 -P|--project                      #Like tsc (def: guessed)
 --skip-project                    #BOOL (def: false). Do not use --project
 -O|--compiler-options             #TCONF.compilerOptions
+-H|--compiler-host                #Use TypeScript's compiler Host API instead of language service API
 --pretty                          #Like tsc
+-e|--emit                         #Emit files to CWD/.ts-node/
+
+--cwd                             #DIR (def: '.') for config resolution
+--scope                           #BOOL (def: false): ignore files outside CONF.cwd
+--files                           #BOOL: if false (def), ignore --files|include|exclude from tsconfig.json
 
 
                                              /=+===============================+=\
@@ -56,11 +62,17 @@ TCONF                             #TypeScript configuration.
                                   #Do it by patching require() (using require.extensions['EXT'])
                                   #For extensions '.ts' and (depending on TCONF.allowJs|jsx) '.js[x]|.tsx'
                                   #Transpilation and type checking are cached, using file path as key.
--r ts-node/register/type-check    #Same but with --type-check
 -r ts-node/register/transpile-only#Same but with --transpile-only
+-r ts-node/register/files         #Same but with --files
 
---type-check                      #BOOL (def: true). Do type check.
+--loader ts-node/esm
+--loader                          #Like ts-node/register[/transpile-only] but transpile to ES modules
+ ts-node/esm/transpile-only       #Requires setting TCONF.module 'esnext' and PACKAGE.type 'module'
+
+CONF.moduleTypes.GLOB             #'cjs|esm|package'. Override whether to transpile to CommonJS or ES modules
+
 -T|--transpile-only               #BOOL (def: false). Do not type check.
+--type-check                      #BOOL. Inverse
 -D|--ignore-diagnostics           #'NUM'|NUM_ARR: ignore type checking errors with those codes
 --log-error                       #BOOL (def: false). `console.error()` on type checking error (instead of throwing)
 
@@ -69,6 +81,7 @@ TCONF                             #TypeScript configuration.
 --skip-ignore                     #BOOL (def: false). Do not use --ignore
 
 -C|--compiler                     #Underlying 'MODULE' (def: 'typescript')
+--transpiler                      #Underlying 'MODULE' (def: 'typescript')
 
 
                                              /=+===============================+=\
@@ -80,10 +93,14 @@ TCONF                             #TypeScript configuration.
 
 ts-node                           #Like node but using -r ts-node/register
                                   #Works as REPL too (using 'repl' core module)
-                                  #  - `.type TYPE` -> print a TYPE (using REGISTER.getTypeInfo())
+                                  #  - `.type TYPE` -> print a TYPE (using SERVICE.getTypeInfo())
+ts-node-script                    #Same as ts-node --script-mode
+ts-node-cwd                       #Same as ts-node --cwd-mode
+ts-node-transpile                 #Same as ts-node --transpile-only
 -e|--eval
 -p|--print
--r|--require                      #Same as node flags
+-i|--interactive                  #Same as node flags
+-r|--require                      #Same as node flags, but can also be put in tsconfig.json
 
 
                                              /=+===============================+=\
@@ -93,22 +110,28 @@ ts-node                           #Like node but using -r ts-node/register
                                              \=+===============================+=/
 
 
-register([CONF])->REGISTER        #Same as -r ts--node/register but programatically
+register([CONF])->SERVICE         #Same as -r ts--node/register but programatically
+create([CONF])->SERVICE           #Same except with SERVICE.enabled(false)
 
-REGISTER.compile
+SERVICE.enabled()->BOOL           #
+SERVICE.enabled(BOOL)             #Get|set the effect of register()
+
+SERVICE.ignored('FILENAME')->BOOL #
+
+SERVICE.compile
  ('TYPESCRIPT', 'FILENAME'[, NUM])#Manually transpile and type check a STR
  ->'JAVASCRIPT'                   #NUM is line offset
 
-REGISTER.getTypeInfo              #Retrieve TYPE of a VAR inside 'TYPESCRIPT'
+SERVICE.getTypeInfo               #Retrieve TYPE of a VAR inside 'TYPESCRIPT'
  ('TYPESCRIPT', 'FILENAME', NUM)  #NUM is byte offset
  ->OBJ                            #OBJ:
                                   #  - name 'TYPE'
                                   #  - comment STR (like autocomplete popup in VSCode)
-                                  #Requires --type-check
+                                  #Not if --transpile-only
 
-REGISTER.ts.*                     #Forwards to TYPESCRIPT.*
-REGISTER.cwd                      #process.cwd()
-REGISTER.extensions               #'EXT'_ARR
+SERVICE.ts.*                      #Forwards to TYPESCRIPT.*
+SERVICE.cwd                       #process.cwd()
+SERVICE.config                    #CONF
 
 CONF.transformers                 #Custom TYPESCRIPT transformers
 CONF.readFile('PATH')[->STR]
