no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
@@ -19,6 +19,7 @@ CONF                              #Can be:
                                   #  - --conf-var-name (CLI)
                                   #  - CONF.varName (register())
                                   #  - ENVVAR TS_NODE_VAR_NAME (CLI, register(), -r)
+                                  #  - TCONF.ts-node.varName
                                   #Serialization for CLI and ENVVAR:
                                   #  - STR -> STR
                                   #  - BOOL -> '0|1'
@@ -34,13 +35,11 @@ TCONF                             #TypeScript configuration.
                                   #  - --sourceMap --inlineSources
                                   #     - but actually uses inline source maps
                                   #     - uses node-source-map-support on type checking ERRORs
-                                  #Default:
-                                  #  - --target es5 (instead of es3)
-                                  #  - --module commonjs
+                                  #Default: @tsconfig/node{version}/tsconfig.json
 --script-mode                     #Resolve tsconfig.json and CONF.ignore based on compiled file (def if there is one)
 --cwd-mode                        #Resolve tsconfig.json and CONF.ignore based on CONF.cwd (def otherwise)
 -P|--project                      #Like tsc (def: guessed)
---skip-project                    #BOOL (def: false). Do not use --project
+--skip-project                    #BOOL (def: false). Do not load tsconfig.json
 -O|--compiler-options             #TCONF.compilerOptions
 -H|--compiler-host                #Use TypeScript's compiler Host API instead of language service API
 --pretty                          #Like tsc
@@ -94,6 +93,7 @@ CONF.moduleTypes.GLOB             #'cjs|esm|package'. Override whether to transp
 ts-node                           #Like node but using -r ts-node/register
                                   #Works as REPL too (using 'repl' core module)
                                   #  - `.type TYPE` -> print a TYPE (using SERVICE.getTypeInfo())
+                                  #Node CLI flags must use NODE_OPTIONS, not argv
 ts-node-script                    #Same as ts-node --script-mode
 ts-node-cwd                       #Same as ts-node --cwd-mode
 ts-node-transpile                 #Same as ts-node --transpile-only
