no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
@@ -41,13 +41,15 @@ TCONF                             #TypeScript configuration.
 -P|--project                      #Like tsc (def: guessed)
 --skip-project                    #BOOL (def: false). Do not load tsconfig.json
 -O|--compiler-options             #TCONF.compilerOptions
--H|--compiler-host                #Use TypeScript's compiler Host API instead of language service API
---pretty                          #Like tsc
--e|--emit                         #Emit files to CWD/.ts-node/
 
 --cwd                             #DIR (def: '.') for config resolution
---scope                           #BOOL (def: false): ignore files outside CONF.cwd
+--scope                           #BOOL (def: false): ignore files outside CONF.scopeDir
+--scopeDir                        #'DIR' (def: TCONF.rootDir, tsconfig.json's DIR, or CONF.cwd)
 --files                           #BOOL: if false (def), ignore --files|include|exclude from tsconfig.json
+
+-e|--emit                         #Emit files to CWD/.ts-node/
+--pretty                          #Like tsc
+-H|--compiler-host                #Use TypeScript's compiler Host API instead of language service API
 
 
                                              /=+===============================+=\
@@ -69,6 +71,7 @@ TCONF                             #TypeScript configuration.
  ts-node/esm/transpile-only       #Requires setting TCONF.module 'esnext' and PACKAGE.type 'module'
 
 CONF.moduleTypes.GLOB             #'cjs|esm|package'. Override whether to transpile to CommonJS or ES modules
+                                  #Def: based on PACKAGE.type and TCONF.module
 
 -T|--transpile-only               #BOOL (def: false). Do not type check.
 --type-check                      #BOOL. Inverse
@@ -79,8 +82,8 @@ CONF.moduleTypes.GLOB             #'cjs|esm|package'. Override whether to transp
 -I|--ignore                       #'REGEXP'_ARR (def: ['node_modules']). Ignore matching files
 --skip-ignore                     #BOOL (def: false). Do not use --ignore
 
--C|--compiler                     #Underlying 'MODULE' (def: 'typescript')
---transpiler                      #Underlying 'MODULE' (def: 'typescript')
+-C|--compiler                     #Underlying 'MODULE' compiler (def: 'typescript')
+--transpiler                      #Underlying 'MODULE' transpiler (def: none)
 
 
                                              /=+===============================+=\
@@ -101,6 +104,8 @@ ts-node-transpile                 #Same as ts-node --transpile-only
 -p|--print
 -i|--interactive                  #Same as node flags
 -r|--require                      #Same as node flags, but can also be put in tsconfig.json
+
+ENVVAR TS_NODE_HISTORY            #Def: ~/.ts_node_repl_history
 
 
                                              /=+===============================+=\
