no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #8.0.0
+VERSION ==>                       #8.1.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1559,6 +1559,8 @@ unicorn/prefer-prototype-methods ##Prefer Object|Array.prototype.METHOD.call|app
 no-extend-native [OBJ]            #Avoid extending native types
                                   #OBJ: exceptions 'TYPE'_ARR
 
+no-unused-private-class-members   #Avoid unused #VAR class properties
+
 max-classes-per-file [NUM|OBJ]    #Max NUM (def: 1) CLASS per file
                                   #OBJ:
                                   #  - max NUM
@@ -1798,7 +1800,7 @@ unicorn/prefer-top-level-await   ##Use top-level await when possible
 require-atomic-updates            #Avoid GLOBAL_VAR = await FUNC(GLOBAL_VAR) as it creates a delay between GLOBAL_VAR
                                   #being read and written, i.e. introducing race conditions
 
-promise/*                        ##Module "eslint-plugin-promise" (5.1.0)
+promise/*                        ##Module "eslint-plugin-promise" (5.1.1)
 promise/catch-or-return [OBJ]    ##If PROMISE.then(FUNC), must call PROMISE.catch(FUNC2)
                                  ##OBJ:
                                  ##  - allowThen BOOL (def: false): allow PROMISE.then(FUNC, FUNC2) too
